Fixed MEPA build

--- a/mepa/microchip/lan8814/CMakeLists.txt
+++ b/mepa/microchip/lan8814/CMakeLists.txt
@@ -9,7 +9,7 @@ MEPA_DRV(LIB_NAME mepa_drv_lan8814_light
          DEFS     -DMEPA_LAN8814_LIGHT=1
          SRCS     src/lan8814.c
                   src/lan8814_ts.c
-         INCL_PUB ../../../me/include ../../include
+         INCL_PUB ../../../me/include ../../include include
          INCL_PRI lan8814)
 
 option(MEPA_lan8814 "Add LAN8814 support in libmeba" OFF)
