Added support for dummy sw phy driver without need for MIIM access

--- a/mepa/CMakeLists.txt
+++ b/mepa/CMakeLists.txt
@@ -25,6 +25,7 @@ add_subdirectory(intel)
 add_subdirectory(ksz9031)
 add_subdirectory(microchip)
 add_subdirectory(vtss)
+add_subdirectory(dummy_phy)
 
 
 ###############################################################################
