--- a/mepa/CMakeLists.txt
+++ b/mepa/CMakeLists.txt
@@ -84,7 +84,7 @@ MEPA_LIB(LIB_NAME mepa_lan966x ADVANCED
 
 MEPA_LIB(LIB_NAME mepa_velocitysp_lan966x ADVANCED
          DEFS     -DMEPA_HAS_LAN8814
-         DRVS     mepa_drv_lan8814_light)
+         DRVS     mepa_drv_lan8814)
 
 MEPA_LIB(LIB_NAME mepa_velocitysp_lan969x ADVANCED
          DEFS     -DMEPA_HAS_LAN8814 -DMEPA_HAS_LAN884x -DMEPA_HAS_LAN887X
