APPL-5714. MACsec: Timestamps are now using a monotonic clock instead of gettimeofday(), added MACsec build for JR2, added MACsec trace group
Merge in UNGE/sw-mesa from master.APPL-5714 to master

Squashed commit of the following:

commit e865428d0f333861869f431377ca5a241000b55a
Merge: 0991df797 938136057
Author: Rene Nielsen <rene.nielsen@microchip.com>
Date:   Fri Jun 7 07:25:12 2024 +0200

    Merge remote-tracking branch 'origin/master' into master.APPL-5714

commit 0991df797d6cceff5f078c1cddd55d9bf5a28850
Merge: 6d8376c4a b6dd4e99a
Author: Rene Nielsen <rene.nielsen@microchip.com>
Date:   Mon Jun 3 14:16:42 2024 +0200

    Merge remote-tracking branch 'origin/master' into master.APPL-5714

commit 6d8376c4ad995df65ae34f530d08bf9071a4bd97
Author: Rene Nielsen <rene.nielsen@microchip.com>
Date:   Mon Jun 3 14:16:22 2024 +0200

    Revert "APPL-5714. MACsec: 00-00-00-00-00-00 is perfectly valid peer MAC address"

    This reverts commit d295dc96c765e8327d2014735ef9198cdded297e.

commit d295dc96c765e8327d2014735ef9198cdded297e
Author: Rene Nielsen <rene.nielsen@microchip.com>
Date:   Fri May 17 07:41:55 2024 +0200

    APPL-5714. MACsec: 00-00-00-00-00-00 is perfectly valid peer MAC address

commit 40ca9741e79f5e8299a981723e6632f5d2c03979
Merge: 11f7bcbc3 f493ba57a
Author: Rene Nielsen <rene.nielsen@microchip.com>
Date:   Wed May 15 16:29:37 2024 +0200

    Merge remote-tracking branch 'origin/master' into master.APPL-5714

commit 11f7bcbc3b2ecbc1ff823b5b283899ab8df96149
Merge: 57b517764 9c5c59dc3
Author: Rene Nielsen <rene.nielsen@microchip.com>
Date:   Wed May 15 09:13:05 2024 +0200

    Merge remote-tracking branch 'origin/master' into master.APPL-5714

commit 57b517764de855d9cd1dfc4544d669f45a1d41ec
Author: Rene Nielsen <rene.nielsen@microchip.com>
Date:   Wed May 15 09:12:50 2024 +0200

    APPL-5714. MACsec: Changed created_time, started_time, and stopped_time from time-of-day to uptime, which is in accordance with TimeStamp from the SNMPv2-TC

commit 5317c460

--- a/meba/CMakeLists.txt
+++ b/meba/CMakeLists.txt
@@ -108,6 +108,9 @@ MEBA_LIB(LIB_NAME caracal MEBA_SRC_FOLDER caracal
 MEBA_LIB(LIB_NAME jr2 MEBA_SRC_FOLDER jr2
          STATIC_DEPENDENCIES    mepa_jr2)
 
+MEBA_LIB(LIB_NAME jr2_macsec MEBA_SRC_FOLDER jr2
+         STATIC_DEPENDENCIES    mepa_jr2_macsec)
+
 MEBA_LIB(LIB_NAME jr2_bringup MEBA_SRC_FOLDER jr2
          STATIC_DEPENDENCIES    mepa_jr2_bringup)
 
@@ -125,7 +128,6 @@ MEBA_LIB(LIB_NAME sparx5 MEBA_SRC_FOLDER sparx5
 
 MEBA_LIB(LIB_NAME sparx5_macsec MEBA_SRC_FOLDER sparx5
          STATIC_DEPENDENCIES    mepa_sparx5_macsec)
-
 
 MEBA_LIB(LIB_NAME sparx5_bringup MEBA_SRC_FOLDER sparx5
          STATIC_DEPENDENCIES    mepa_sparx5_bringup)
