--- a/mepa/CMakeLists.txt
+++ b/mepa/CMakeLists.txt
@@ -48,6 +48,10 @@ MEPA_LIB(LIB_NAME mepa_jr2 ADVANCED
          DEFS     -DMEPA_HAS_VTSS       -DMEPA_HAS_AQR  -DMEPA_HAS_GPY2211
          DRVS     mepa_drv_vtss_10g_ts  mepa_drv_aqr    mepa_drv_intel)
 
+MEPA_LIB(LIB_NAME mepa_jr2_macsec ADVANCED
+         DEFS     -DMEPA_HAS_VTSS       -DMEPA_HAS_AQR  -DMEPA_HAS_GPY2211
+         DRVS     mepa_drv_vtss_10g_macsec_ts  mepa_drv_aqr    mepa_drv_intel)
+
 MEPA_LIB(LIB_NAME mepa_jr2_bringup ADVANCED
          DEFS     -DMEPA_HAS_VTSS
          DRVS     mepa_drv_vtss_10g_ts)
@@ -68,11 +72,9 @@ MEPA_LIB(LIB_NAME mepa_sparx5 ADVANCED
          DEFS     -DMEPA_HAS_VTSS       -DMEPA_HAS_AQR  -DMEPA_HAS_GPY2211  -DMEPA_HAS_LAN8814 -DMEPA_HAS_LAN884x
          DRVS     mepa_drv_vtss_10g_ts  mepa_drv_aqr    mepa_drv_intel      mepa_drv_lan8814    mepa_drv_lan884x)
 
-
 MEPA_LIB(LIB_NAME mepa_sparx5_macsec ADVANCED
          DEFS     -DMEPA_HAS_VTSS       -DMEPA_HAS_AQR  -DMEPA_HAS_GPY2211  -DMEPA_HAS_LAN8814
          DRVS     mepa_drv_vtss_10g_macsec_ts  mepa_drv_aqr    mepa_drv_intel      mepa_drv_lan8814)
-
 
 MEPA_LIB(LIB_NAME mepa_sparx5_bringup ADVANCED
          DEFS     -DMEPA_HAS_VTSS
