--- a/.cmake/release.yaml
+++ b/.cmake/release.yaml
@@ -22,7 +22,7 @@ conf:
 
   # git_tag_prv points to a GIT changeset corresponding to the previous release.
   # MANDATORY.
-  git_tag_prv: origin/2024.06-soak
+  git_tag_prv: origin/2024.06-soak # Both MESA-2024.06 and MESA-2024.06-1 come from this branch (SIC!)
 
   # git_tag_cur points to a GIT changeset corresponding to the upcoming release.
   # In general, this can be set to HEAD, but for release note generation based
