--- a/mesa/docs/sitemap.yaml
+++ b/mesa/docs/sitemap.yaml
@@ -11,6 +11,9 @@ pages:
 
     - name: "Release notes"
       pages:
+        - name: "MESA-2024.09"
+          src:  "mesa/docs/release-notes/mesa-2024.09.adoc"
+
         - name: "MESA-2024.06-1"
           src:  "mesa/docs/release-notes/mesa-2024.06-1.adoc"
 
