--- a/.cmake/cmake-presets.yaml
+++ b/.cmake/cmake-presets.yaml
@@ -6,9 +6,9 @@ presets:
     mipsel:
         :arch:             "mipsel"
         :cmake_flags:      "-DCMAKE_BUILD_TYPE=Release"
-        :brsdk:            "2024.09"
+        :brsdk:            "2024.02.6-1125"
         :brsdk_arch:       "mipsel-mips32r2-linux-gnu"
-#        :brsdk_branch:     "2024.09-soak"
+        :brsdk_branch:     "brsdk"
         :toolchainfile:    "mipsel-mips32r2-linux-gnu/xstax/release/x86_64-linux/share/buildroot/toolchainfile.cmake"
         :cmake:            "mipsel-mips32r2-linux-gnu/xstax/release/x86_64-linux/bin/cmake"
         :legal:            "mipsel-mips32r2-linux-gnu/xstax/release/legal-info"
@@ -17,9 +17,9 @@ presets:
     mipsel-debug:
         :arch:             "mipsel"
         :cmake_flags:      "-DCMAKE_BUILD_TYPE=Debug"
-        :brsdk:            "2024.09"
+        :brsdk:            "2024.02.6-1125"
         :brsdk_arch:       "mipsel-mips32r2-linux-gnu"
-#        :brsdk_branch:     "2024.09-soak"
+        :brsdk_branch:     "brsdk"
         :toolchainfile:    "mipsel-mips32r2-linux-gnu/xstax/release/x86_64-linux/share/buildroot/toolchainfile.cmake"
         :cmake:            "mipsel-mips32r2-linux-gnu/xstax/release/x86_64-linux/bin/cmake"
         :legal:            "mipsel-mips32r2-linux-gnu/xstax/release/legal-info"
@@ -39,9 +39,9 @@ presets:
     arm64:
         :arch:             "arm64"
         :cmake_flags:      "-DCMAKE_BUILD_TYPE=Release"
-        :brsdk:            "2024.09"
+        :brsdk:            "2024.02.6-1125"
         :brsdk_arch:       "arm64-armv8_a-linux-gnu"
-#        :brsdk_branch:     "2024.09-soak"
+        :brsdk_branch:     "brsdk"
         :toolchainfile:    "arm64-armv8_a-linux-gnu/xstax/release/x86_64-linux/share/buildroot/toolchainfile.cmake"
         :cmake:            "arm64-armv8_a-linux-gnu/xstax/release/x86_64-linux/bin/cmake"
         :legal:            "arm64-armv8_a-linux-gnu/xstax/release/legal-info"
@@ -50,9 +50,9 @@ presets:
     arm64-debug:
         :arch:             "arm64"
         :cmake_flags:      "-DCMAKE_BUILD_TYPE=Debug"
-        :brsdk:            "2024.09"
+        :brsdk:            "2024.02.6-1125"
         :brsdk_arch:       "arm64-armv8_a-linux-gnu"
-#        :brsdk_branch:     "2024.09-soak"
+        :brsdk_branch:     "brsdk"
         :toolchainfile:    "arm64-armv8_a-linux-gnu/xstax/release/x86_64-linux/share/buildroot/toolchainfile.cmake"
         :cmake:            "arm64-armv8_a-linux-gnu/xstax/release/x86_64-linux/bin/cmake"
         :legal:            "arm64-armv8_a-linux-gnu/xstax/release/legal-info"
@@ -60,9 +60,9 @@ presets:
     arm64-asan:
         :arch:             "arm64"
         :cmake_flags:      "-DCMAKE_BUILD_TYPE=Debug -DBUILD_ASAN=true"
-        :brsdk:            "2024.09"
+        :brsdk:            "2024.02.6-1125"
         :brsdk_arch:       "arm64-armv8_a-linux-gnu"
-#        :brsdk_branch:     "2024.09-soak"
+        :brsdk_branch:     "brsdk"
         :toolchainfile:    "arm64-armv8_a-linux-gnu/xstax/release/x86_64-linux/share/buildroot/toolchainfile.cmake"
         :cmake:            "arm64-armv8_a-linux-gnu/xstax/release/x86_64-linux/bin/cmake"
         :legal:            "arm64-armv8_a-linux-gnu/xstax/release/legal-info"
@@ -70,9 +70,9 @@ presets:
     arm:
         :arch:             "arm"
         :cmake_flags:      "-DCMAKE_BUILD_TYPE=Release"
-        :brsdk:            "2024.09"
+        :brsdk:            "2024.02.6-1125"
         :brsdk_arch:       "arm-cortex_a8-linux-gnueabihf"
-#        :brsdk_branch:     "2024.09-soak"
+        :brsdk_branch:     "brsdk"
         :toolchainfile:    "arm-cortex_a8-linux-gnu/xstax/release/x86_64-linux/share/buildroot/toolchainfile.cmake"
         :cmake:            "arm-cortex_a8-linux-gnu/xstax/release/x86_64-linux/bin/cmake"
         :legal:            "arm-cortex_a8-linux-gnu/xstax/release/legal-info"
@@ -81,9 +81,9 @@ presets:
     arm-debug:
         :arch:             "arm"
         :cmake_flags:      "-DCMAKE_BUILD_TYPE=Debug"
-        :brsdk:            "2024.09"
+        :brsdk:            "2024.02.6-1125"
         :brsdk_arch:       "arm-cortex_a8-linux-gnueabihf"
-#        :brsdk_branch:     "2024.09-soak"
+        :brsdk_branch:     "brsdk"
         :toolchainfile:    "arm-cortex_a8-linux-gnu/xstax/release/x86_64-linux/share/buildroot/toolchainfile.cmake"
         :cmake:            "arm-cortex_a8-linux-gnu/xstax/release/x86_64-linux/bin/cmake"
         :legal:            "arm-cortex_a8-linux-gnu/xstax/release/legal-info"
@@ -91,8 +91,8 @@ presets:
     x86:
         :arch:             "x86_64"
         :cmake_flags:      "-DCMAKE_BUILD_TYPE=Release -DBUILD_MESA_DEMO=true"
-        :brsdk:            "2024.09"
-#        :brsdk_branch:     "2024.09-soak"
+        :brsdk:            "2024.02.6-1125"
+        :brsdk_branch:     "brsdk"
         :toolchain_branch: "toolchain"
         :toolchainfile:    "x86_64-nocona-linux-gnu/standalone/release/x86_64-linux/share/buildroot/toolchainfile.cmake"
         :cmake:            "x86_64-nocona-linux-gnu/standalone/release/x86_64-linux/bin/cmake"
