sup: add '.cmake' to path when running in docker
Review record: https://bitbucket.microchip.com/projects/UNGE/repos/sw-mesa/pull-requests/622

--- a/.docker.env
+++ b/.docker.env
@@ -48,4 +48,6 @@ MCHP_DOCKER_OPTIONS="-v $HOME:/mapped_home \
     -e GIT_EDITOR \
     -e GIT_EXEC_PATH \
     -e GIT_INDEX_FILE \
-    -e GIT_PREFIX"
+    -e GIT_PREFIX \
+    -e PATH=$top/.cmake:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+
