--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -183,6 +183,7 @@ elseif (${MESA_OPSYS_VELOCITYSP})
     set(GLOBAL_DEFS -DVTSS_OPSYS_VELOCITYSP -DVTSS_OPT_SYMREG=0)
 endif ()
 
+set(mesa_active_target )
 macro(API_TARGET)
   set(oneValueArgs LIB CHIP)
   set(multiValueArgs DEFS)
@@ -224,6 +225,7 @@ macro(API_TARGET)
   if (${A_LIB}_static)
       message(STATUS "Adding ${A_LIB}_static (${A_CHIP}) MESA=${has_mesa} Defines: [${DEFS}]")
       set_target_properties(${A_LIB}_static PROPERTIES EXCLUDE_FROM_ALL FALSE)
+      list(APPEND mesa_active_target ${A_LIB}_static)
   else()
       set_target_properties(${A_LIB}_static PROPERTIES EXCLUDE_FROM_ALL TRUE)
   endif()
@@ -282,6 +284,8 @@ API_TARGET(LIB lan966x_ad            CHIP 966X          DEFS -DVTSS_OPT_FPGA=2)
 API_TARGET(LIB lan9698RED            CHIP 969X          DEFS -DVTSS_OPT_PORT_COUNT=30)
 API_TARGET(LIB lan969x               CHIP 969X          DEFS -DVTSS_OPT_PORT_COUNT=30)
 API_TARGET(LIB lan969x_lm            CHIP 969X          DEFS -DVTSS_OPT_PORT_COUNT=30 -DVTSS_OPT_LIGHT=1 -DVTSS_OPT_TRACE=0 -DVTSS_OPT_TRACE_ERROR=0 -DVTSS_OPT_DEBUG_PRINT=1)
+
+mesa_export_compile_commands_recursive(${mesa_active_target})
 
 option(BUILD_MESA_CAPABILITY_DUMPER "Build all the mesa capability dumper function" OFF)
 mark_as_advanced(BUILD_MESA_CAPABILITY_DUMPER)
