--- a/mesa/demo/CMakeLists.txt
+++ b/mesa/demo/CMakeLists.txt
@@ -111,6 +111,7 @@ macro(APP_TARGET)
         json-c
         ${A_MESA}
         ${A_MEBA}_static
+        lm_utils
     )
     set_target_properties(${A_NAME} PROPERTIES OUTPUT_NAME "mesa-demo-${A_MESA}")
 
