cmake: when inline utils, take it as a object-library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ if (${MESA_OPSYS_LINUX})
 endif()
 
 if (${MESA_USE_INLINE_UTILS})
+    set(LM_UTILS_LIBRARY_TYPE_OBJECT ON CACHE BOOL "Create an object library instead of static/shared library" FORCE)
     add_subdirectory(utils)
 endif ()
 include_directories(${lm_utils_SOURCE_DIR}/include)
@@ -216,7 +217,13 @@ macro(API_TARGET)
   set(DEFS ${GLOBAL_DEFS} -DVTSS_CHIP_${A_CHIP} ${A_DEFS})
 
   if (${BUILD_SHARED_LIBS})
-      add_library(${A_LIB} SHARED ${API_UNI_SRC} ${API_MESA_SRC})
+      if (${MESA_USE_INLINE_UTILS})
+          add_library(${A_LIB} SHARED $<TARGET_OBJECTS:lm_utils> ${API_UNI_SRC} ${API_MESA_SRC})
+      else ()
+          add_library(${A_LIB} SHARED ${API_UNI_SRC} ${API_MESA_SRC})
+          target_link_libraries(${A_LIB} lm_utils)
+      endif ()
+
       target_compile_options(${A_LIB} PUBLIC ${DEFS})
 
       if (${A_LIB})
@@ -227,7 +234,12 @@ macro(API_TARGET)
       endif()
   endif()
 
-  add_library(${A_LIB}_static STATIC ${API_UNI_SRC} ${API_MESA_SRC})
+  if (${MESA_USE_INLINE_UTILS})
+      add_library(${A_LIB}_static STATIC $<TARGET_OBJECTS:lm_utils> ${API_UNI_SRC} ${API_MESA_SRC})
+  else ()
+      add_library(${A_LIB}_static STATIC ${API_UNI_SRC} ${API_MESA_SRC})
+      target_link_libraries(${A_LIB}_static lm_utils)
+  endif ()
   set_target_properties(${A_LIB}_static PROPERTIES OUTPUT_NAME "${A_LIB}")
   target_compile_options(${A_LIB}_static PUBLIC ${DEFS}
                                          PRIVATE -Wno-format-security -Wno-sign-compare -Wno-type-limits -Wno-implicit-fallthrough -Wno-array-parameter -Wno-enum-conversion)
