MESA-998: Enabled mipsel_vsc7449 target (53 ports)

--- a/mesa/demo/CMakeLists.txt
+++ b/mesa/demo/CMakeLists.txt
@@ -296,7 +296,7 @@ if (CMAKE_SYSTEM_PROCESSOR STREQUAL "mipsel")
     #IMG_TARGET(NAME mipsel_vsc7442        TYPE mfi  APP app_vsc7442  MACHINE jaguar2_pcb111 )
     IMG_TARGET(NAME mipsel_vsc7448_pcb110  TYPE mfi  APP app_vsc7448  MACHINE jaguar2_pcb110 )
     IMG_TARGET(NAME mipsel_vsc7448_pcb111  TYPE mfi  APP app_vsc7448  MACHINE jaguar2_pcb111 )
-    #IMG_TARGET(NAME mipsel_vsc7449        TYPE mfi  APP app_vsc7449  MACHINE jaguar2_pcb111 )
+    IMG_TARGET(NAME mipsel_vsc7449         TYPE mfi  APP app_vsc7449  MACHINE jaguar2_pcb111 )
 
 elseif (CMAKE_SYSTEM_PROCESSOR STREQUAL "aarch64")
         #IMG_TARGET(NAME arm64_ls1046_lan966x     TYPE fit      APP app_lan966x         MACHINE ls1046a)
