mepa: add a lib for p64h
It includes VTSS and DUMMY phy drivers. DUMMY is used in
emulation.

--- a/mepa/CMakeLists.txt
+++ b/mepa/CMakeLists.txt
@@ -99,3 +99,7 @@ MEPA_LIB(LIB_NAME mepa_velocitysp_lan969x ADVANCED
 MEPA_LIB(LIB_NAME mepa_velocitysp_lan969x_auto ADVANCED
          DEFS     -DMEPA_HAS_LAN887X -DMEPA_HAS_LAN884x
          DRVS     mepa_drv_lan887x mepa_drv_lan884x)
+
+MEPA_LIB(LIB_NAME mepa_p64h ADVANCED
+         DEFS     -DMEPA_HAS_VTSS       -DMEPA_HAS_DUMMY_PHY
+         DRVS     mepa_drv_vtss_10g_ts  mepa_drv_dummy_phy)
