meba: add a lib for p64h

--- a/meba/CMakeLists.txt
+++ b/meba/CMakeLists.txt
@@ -135,3 +135,5 @@ MEBA_LIB(LIB_NAME sparx5_bringup MEBA_SRC_FOLDER sparx5
 MEBA_LIB(LIB_NAME lan966x MEBA_SRC_FOLDER lan966x
          STATIC_DEPENDENCIES    mepa_lan966x)
 
+MEBA_LIB(LIB_NAME p64h MEBA_SRC_FOLDER p64h
+         STATIC_DEPENDENCIES    mepa_p64h)
