Do not define VTSS_OPT_SYMREG for LMStaX

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -191,7 +191,7 @@ set(LIST_OF_API_TARGETS)
 if (${MESA_OPSYS_LINUX})
     set(GLOBAL_DEFS -DVTSS_OPSYS_LINUX -DVTSS_OPT_SYMREG=1)
 elseif (${MESA_OPSYS_VELOCITYSP})
-    set(GLOBAL_DEFS -DVTSS_OPSYS_VELOCITYSP -DVTSS_OPT_SYMREG=0)
+    set(GLOBAL_DEFS -DVTSS_OPSYS_VELOCITYSP)
 endif ()
 
 set(mesa_active_target )
