IMPORT: mepa 92583787b3699eb203fa73865023093595f579a7
From URL: ssh://git@bitbucket.microchip.com/unge/sw-mepa.git

--- a/mepa/microchip/lan887x/CMakeLists.txt
+++ b/mepa/microchip/lan887x/CMakeLists.txt
@@ -12,9 +12,11 @@ if (${MEPA_lan887x_static_mem})
 endif()
 
 MEPA_DRV(LIB_NAME mepa_drv_lan887x
-         SRCS     src/lan887x.c src/lan887x_private.c src/lan887x_tc10.c
+         SRCS     ../common/src/phy_lib.c
+                  src/lan887x.c
+                  src/lan887x_tc10.c
 		 DEFS	  ${MEPA_lan887x_custom_defs}
-         INCL_PUB ../../../me/include ../../include
+         INCL_PUB ../../../me/include ../../include ../common/include
          INCL_PRI lan887x)
 
 option(MEPA_lan887x "Add LAN887X support in libmeba" OFF)
